ingress+linux&winpods/websvc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp1
    spec:
      containers:
      - name: webapp1
        image: evillgenius/simplehttp:latest
        ports:
        - containerPort: 80
      nodeSelector:
        os: linux
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp2
    spec:
      containers:
      - name: webapp2
        image: evillgenius/simplehttp:latest
        ports:
        - containerPort: 80
      nodeSelector:
        os: linux
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webapp3
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp3
    spec:
      containers:
      - name: webapp3
        image: microsoft/iis:nanoserver
        ports:
        - containerPort: 80
      nodeSelector:
        os: windows
---
apiVersion: v1
kind: Service
metadata:
  name: webapp1-svc
  labels:
    app: webapp1
spec:
  type: NodePort
  ports:
  - port: 80
    # This port needs to be available on all nodes in the cluster
    nodePort: 31775
    targetPort: 80
    protocol: TCP
    name: app1-http
  selector:
    app: webapp1
---
apiVersion: v1
kind: Service
metadata:
  name: webapp2-svc
  labels:
    app: webapp2
spec:
  type: NodePort
  ports:
  - port: 80
    # This port needs to be available on all nodes in the cluster
    nodePort: 31776
    targetPort: 80
    protocol: TCP
    name: app2-http
  selector:
    app: webapp2
---
apiVersion: v1
kind: Service
metadata:
  name: webapp3-svc
  labels:
    app: webapp3
spec:
  type: NodePort
  ports:
  - port: 80
    # This port needs to be available on all nodes in the cluster
    nodePort: 31777
    targetPort: 80
    protocol: TCP
    name: app3-http
  selector:
    app: webapp3
