ingress+linux&winpods/ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: webapp-ingress
spec:
  rules:
    - host: www.52.183.35.240.xip.io
      http:
        paths:
          - backend:
              serviceName: webapp1-svc
              servicePort: 80
            path: /webapp1
          - backend:
              serviceName: webapp2-svc
              servicePort: 80
            path: /webapp2
          - backend:
              serviceName: webapp3-svc
              servicePort: 80
            path: /
